shared functions to utils.py

--- a/notebooks/tasks/disambiguation-candidates.ipynb
+++ b/notebooks/tasks/disambiguation-candidates.ipynb
@@ -42,6 +42,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "ce150ce5-8f61-40b5-830a-c38159ede173",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "f8fb2b75-48c8-4336-b647-d7b9bbedb631",
    "metadata": {},
@@ -51,21 +62,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "37a02df6",
    "metadata": {},
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
-    "import hashlib\n",
-    "import importlib\n",
-    "from IPython.display import clear_output\n",
     "import json\n",
+    "from IPython.display import HTML\n",
     "import os\n",
     "import requests\n",
-    "import subprocess\n",
-    "import sys\n",
-    "import time"
+    "import time\n",
+    "import utils"
    ]
   },
   {
@@ -78,53 +86,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "684d7adb-4839-49be-9a32-3b0fa15700e9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "char_package = \"📦\"\n",
-    "char_success = \"✅\"\n",
-    "char_failure = \"❌\"\n",
-    "\n",
-    "\n",
-    "def safe_import(package_name):\n",
-    "    \"\"\"Import a package;. If it missing, download it first\"\"\"\n",
-    "    try:\n",
-    "        return importlib.import_module(package_name)\n",
-    "    except ImportError:\n",
-    "        print(f\"{char_package} {package_name} not found. Installing...\")\n",
-    "        subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", package_name])\n",
-    "        print(f\"Finished installing {package_name}\")\n",
-    "        return importlib.import_module(package_name)\n",
-    "\n",
-    "\n",
-    "openai = safe_import(\"openai\")\n",
-    "pd = safe_import(\"pandas\")\n",
-    "pydantic = safe_import(\"pydantic\")\n",
-    "spacy = safe_import(\"spacy\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8bccb443-6726-4448-828b-1dbb7248924a",
-   "metadata": {},
-   "source": [
-    "Here is code for monitoring the progress of the task:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "4e29cb7a-142b-40ba-8b0e-752593db94e4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def squeal(text=None):\n",
-    "    \"\"\"Clear the output buffer of the current cell and print the given text\"\"\"\n",
-    "    clear_output(wait=True)\n",
-    "    if not text is None: \n",
-    "        print(text)"
+    "openai = utils.safe_import(\"openai\")\n",
+    "pd = utils.safe_import(\"pandas\")\n",
+    "pydantic = utils.safe_import(\"pydantic\")\n",
+    "spacy = utils.safe_import(\"spacy\")"
    ]
   },
   {
@@ -138,26 +108,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "44afc346-6d51-4e5f-a2c0-d62961732d00",
+   "id": "2751ca67-3c31-4a56-ab87-532231cb80de",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import HTML, display\n",
-    "\n",
-    "\n",
-    "def set_css():\n",
-    "    \"\"\"Fix line wrapping of output texts for Google Colab\"\"\"\n",
-    "    display(HTML(\"<style> pre { white-space: pre-wrap; </style>\"))\n",
-    "\n",
-    "\n",
-    "try:\n",
-    "    from google.colab import files\n",
-    "    IN_COLAB = True\n",
-    "except:\n",
-    "    IN_COLAB = False\n",
-    "\n",
-    "if IN_COLAB:\n",
-    "    get_ipython().events.register('pre_run_cell', set_css)\n"
+    "in_colab = utils.check_google_colab()"
    ]
   },
   {
@@ -300,7 +255,7 @@
     "    wikidata_cache = read_json_file(DISAMBUGUATION_CACHE_FILE_WIKIDATA)\n",
     "    for entity in entities:\n",
     "        if entity[\"entity_text\"] not in wikidata_cache.keys():\n",
-    "            squeal(f\"Looking up entity {entity['entity_text']} (text id {entity['text_id'] + 1}) on WikiData.org...\")\n",
+    "            utils.squeal(f\"Looking up entity {entity['entity_text']} (text id {entity['text_id'] + 1}) on WikiData.org...\")\n",
     "            wikidata_data = query_wikidata_for_single_entity(entity[\"entity_text\"])\n",
     "            wikidata_cache[entity[\"entity_text\"]] = [{\"id\": candidate[\"id\"], \n",
     "                                                            \"description\": candidate[\"description\"]} \n",
@@ -355,7 +310,7 @@
    "id": "aeb61643-a253-4dc4-a705-6475a4a78e55",
    "metadata": {},
    "source": [
-    "First we define five helper functions"
+    "First we define six helper functions"
    ]
   },
   {
@@ -399,7 +354,7 @@
     "        except:\n",
     "            pass\n",
     "    if not openai_api_key:\n",
-    "        print(f\"{char_failure} no openai_api_key found!\")\n",
+    "        print(f\"{utils.CHAR_FAILURE} no openai_api_key found!\")\n",
     "        return \"\"\n",
     "    return openai_api_key"
    ]
@@ -432,7 +387,7 @@
     "        )\n",
     "        return response.choices[0].message.content\n",
     "    except:\n",
-    "        print(f\"{char_failure} GPT call failed\")\n",
+    "        print(f\"{utils.CHAR_FAILURE} GPT call failed\")\n",
     "        return []"
    ]
   },
@@ -441,7 +396,7 @@
    "id": "ef64fd3d-e7fc-41b7-b505-57c0425ef9a3",
    "metadata": {},
    "source": [
-    "Next, we create a prompt for each entity, send it to the LLM and collect the responses. When the combination of the entity and the context text is available in the cache of previously processed entities, we skip consulting the gpt and use the wikidata id stored in the cache. "
+    "This helper function creates a prompt for each entity and sends it to the LLM and collect the responses. When the combination of the entity and the context text is available in the cache of previously processed entities, we skip consulting the gpt and use the wikidata id stored in the cache. "
    ]
   },
   {
@@ -462,10 +417,10 @@
     "        if (entity[\"entity_text\"] in gpt_cache and \n",
     "            entity[\"text\"] in gpt_cache[entity[\"entity_text\"]] and\n",
     "            model in gpt_cache[entity[\"entity_text\"]][entity[\"text\"]]):\n",
-    "            squeal(f\"Retrieving entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} from cache\")\n",
+    "            utils.squeal(f\"Retrieving entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} from cache\")\n",
     "            entity[\"wikidata_id\"] = gpt_cache[entity[\"entity_text\"]][entity[\"text\"]][model] | {\"model\": model}\n",
     "        else:\n",
-    "            squeal(f\"Sending entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} to GPT\")\n",
+    "            utils.squeal(f\"Sending entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} to GPT\")\n",
     "            prompt = make_prompt(entity[\"entity_text\"], entity[\"text\"], entity[\"candidates\"])\n",
     "            entity[\"wikidata_id\"] = {model: process_text_with_gpt(openai_client, model, prompt)}\n",
     "            if entity[\"entity_text\"] not in gpt_cache:\n",
@@ -478,14 +433,6 @@
     "    write_json_file(DISAMBUGUATION_CACHE_FILE_GPT, gpt_cache)\n",
     "    print(\"Finished processing\")\n",
     "    return entities"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bcb2b5fd-85e5-472c-8119-e2e02e3276ff",
-   "metadata": {},
-   "source": [
-    "Next, we call the function to select the right wikidata id with gpt. The results are stored in the `entities` variable. We show the first of the results."
    ]
   },
   {
@@ -507,6 +454,14 @@
     "            if text_id in entities_per_text and entity[\"text\"] in entities_per_text[text_id]:\n",
     "                entity[\"wikidata_id\"] = entities_per_text[text_id][entity[\"text\"]][\"wikidata_id\"]\n",
     "    return texts_input"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcb2b5fd-85e5-472c-8119-e2e02e3276ff",
+   "metadata": {},
+   "source": [
+    "We lookup the wikidata_ids of entities with the GPT. Next, we call the function to select the right wikidata id with gpt. The results are stored in the `entities` variable. We show the first of the results."
    ]
   },
   {
@@ -538,38 +493,7 @@
    "source": [
     "## 5. Disambiguation visualization\n",
     "\n",
-    "Here we show the results of the disambiguation task in a more readable format"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6f5b95c1-a034-4d84-989e-ceaf3ace9456",
-   "metadata": {},
-   "source": [
-    "First we define a helper function for performing the visualization"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "67b0e600-18a6-4f96-baf5-8b158f9f104b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "COLORS = {\"PERSON\": \"red\", \"LOCATION\": \"green\", \"OTHER\": \"blue\"}\n",
-    "\n",
-    "\n",
-    "def mark_entities_in_text(texts_input, entities):\n",
-    "    \"\"\"Convert the text to HTML with colored antities and return these\"\"\"\n",
-    "    for entity in reversed(entities):\n",
-    "        entity_label = entity[\"label\"] if entity[\"label\"] in COLORS.keys() else \"OTHER\"\n",
-    "        if \"wikidata_id\" in entity:\n",
-    "            texts_input = texts_input[:entity[\"end_char\"]] + f\"<sup>{entity['wikidata_id']['id']}</sup>\" + texts_input[entity[\"end_char\"]:]\n",
-    "        texts_input = texts_input[:entity[\"end_char\"]] + \"</span>\" + texts_input[entity[\"end_char\"]:]\n",
-    "        texts_input = (texts_input[:entity[\"start_char\"]] + \n",
-    "                      f\"<span style=\\\"border: 1px solid black; color: {COLORS[entity_label]};\\\">\" + \n",
-    "                      texts_input[entity[\"start_char\"]:])\n",
-    "    return texts_input"
+    "Here we show the results of the disambiguation task in a more readable format. We use the helper function `mark_entities_in_text` for this. But you will not find the definition of this helper function here: it is defined in the file `utils.py` because it is used by other notebooks as well."
    ]
   },
   {
@@ -577,12 +501,12 @@
    "id": "8842c94b-63c4-4d43-bfea-ef595b440bba",
    "metadata": {},
    "source": [
-    "Then we call the helper function and show the first three texts with their entities and the WikiData ids:"
+    "Here we call the helper function and show the first three texts with their entities and the WikiData ids. We do not supply it with the cleaned text but with the text that was output of the named entity recognition (`text_llm_output`), because that is sometimes different from the cleaned text."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "867bafc8-2fce-4d03-a8db-9f9296b1f16d",
    "metadata": {},
    "outputs": [
@@ -624,10 +548,9 @@
     }
    ],
    "source": [
-    "entities_all = []\n",
     "for text_id, text in enumerate(texts_output):\n",
     "    if text_id < 3:\n",
-    "        display(HTML(mark_entities_in_text(text[\"text_llm_output\"], text[\"entities\"])))"
+    "        display(HTML(utils.mark_entities_in_text(text[\"text_llm_output\"], text[\"entities\"])))"
    ]
   },
   {
@@ -642,32 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "07291f01-377d-400e-bf86-227f0db3a363",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def save_results(texts, key):\n",
-    "    \"\"\"Save preprocessed texts in a json file\"\"\"\n",
-    "    json_string = json.dumps(texts, ensure_ascii=False, indent=2)\n",
-    "    hash = hashlib.sha1(json_string.encode(\"utf-8\")).hexdigest()\n",
-    "    output_file_name = f\"output_{key}{hash}.json\"\n",
-    "    with open(output_file_name, \"w\", encoding=\"utf-8\") as output_file:\n",
-    "        print(json_string, end=\"\", file=output_file)\n",
-    "        output_file.close()\n",
-    "        if IN_COLAB:\n",
-    "            try:\n",
-    "                files.download(output_file_name)\n",
-    "                print(f\"️{char_success} Downloaded preprocessed texts to file {output_file_name}\")\n",
-    "            except:\n",
-    "                print(f\"️{char_failure} Downloading preprocessed texts failed!\")\n",
-    "        else:\n",
-    "            print(f\"️{char_success} Saved preprocessed texts to file {output_file_name}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "3db2ed8b-d12b-4945-b749-446c0f8b476d",
    "metadata": {},
    "outputs": [
@@ -680,7 +578,7 @@
     }
    ],
    "source": [
-    "save_results(texts_output, \"disambiguation_\")"
+    "utils.save_results(texts_output, \"disambiguation_\", in_colab=in_colab)"
    ]
   },
   {
