--- a/notebooks/tasks/entity_linking.ipynb
+++ b/notebooks/tasks/entity_linking.ipynb
@@ -7,7 +7,32 @@
    "source": [
     "# Entity linking\n",
     "\n",
-    "First draft, code copied from disambiguation_candidates.ipynb notebook"
+    "This notebook links the entities found in the previous steps (NER, Disambiguation) to the artefacts\n",
+    "\n",
+    "### Rationale\n",
+    "\n",
+    "Making explicit the relations between the named entities helps us to better understand the data. In the context of museum artefact descriptions there are two major types of relations: relation between named entities among each other and relations between named entities and the artefacts. In the main data files used for testing the software, from the Egyptian Museum of Turin, the first group of relations is quite rare. Therefore we focus on finding relations/links between artefacts and the named entities in their description texts.\n",
+    "\n",
+    "We use large language models (LLMs) to derive the relations. To make the task manageable, we have restricted the relations to six types:\n",
+    "\n",
+    "1. the artefact represents the entity\n",
+    "2. the entity represents the geographical context of the artefact\n",
+    "3. the entity represents the historical context of the artefact\n",
+    "4. the entity is related to an object or person represented in the artefact\n",
+    "5. the entity is a previous owner of the artefact\n",
+    "6. the entity is mentioned for another reason\n",
+    "\n",
+    "We include the definitions of these types in the prompt sent to the LLMs and ask them to select the best matching one. We offer each entity to the LLMs separately.\n",
+    "\n",
+    "### Processing overview\n",
+    "\n",
+    "The process consists of the following steps:\n",
+    "\n",
+    "1. Import required software libraries: We start with importing required software libraries\n",
+    "2. Read the text that requires processing: Next we obtain the input text from the Disambiguation notebook\n",
+    "3. Linking: The text is sent to GPT with a prompt that instructs it to select the best type for the link between the artefact and the entity\n",
+    "4. Linking visualization: The link type is displayed in text with colour-coded entities\n",
+    "5. Save results: Save the results of the linking process for future processing"
    ]
   },
   {
@@ -101,12 +126,12 @@
    "source": [
     "## 2. Read the texts that require processing\n",
     "\n",
-    "The texts should have been processed by the disambiguation_candidates.ipynb notebook. The file read here is an output file of that notebook. We read the texts and the associated metadata and show the first text with its entities."
+    "The texts should have been processed by the `ner.ipynb` notebook. The file read here is an output file of the `disambiguation-candidates.ipynb` notebook which in turn processed the `ner.ipynb` output. We read the texts and the associated metadata and show the first text with its entities."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 56,
    "id": "89a5f46e-2cd4-4761-9ab9-4e64259dc259",
    "metadata": {},
    "outputs": [
@@ -125,7 +150,7 @@
     "    texts_input = json.load(infile)\n",
     "    infile.close()\n",
     "print({\"text_cleaned\": texts_input[0][\"text_cleaned\"], \n",
-    "       \"entities\": texts_input[0][\"entities\"]})\n"
+    "       \"entities\": texts_input[0][\"entities\"]})"
    ]
   },
   {
@@ -133,9 +158,9 @@
    "id": "3e2c9ca7-bb1c-4c94-afa0-1a0016def39d",
    "metadata": {},
    "source": [
-    "## 3. Disambiguate entities with GPT\n",
+    "## 3. Link entities with GPT\n",
     "\n",
-    "We disambiguate entities by sending a prompt with each entity text, the context text and the WikiData candidates ids and their descriptions to an LLM. We ask the LLM to return the id associated with the description that best matches the entity in the given context."
+    "We link entities to the artefacts by sending a prompt with each entity text, the context text and six candidate link types to an LLM. We ask the LLM to return the id associated with the type that best matches the type of link between the entity and the artefact."
    ]
   },
   {
@@ -143,12 +168,12 @@
    "id": "cdc12725-3003-4c45-a6da-55dd3139f281",
    "metadata": {},
    "source": [
-    "First we define a helper function for creating the LLM prompt"
+    "First we define three helper functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "id": "5504175d-8caf-4917-b181-5f449cc7f4e6",
    "metadata": {},
    "outputs": [],
@@ -179,73 +204,195 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
+   "id": "9fd0b672-7c62-4cdc-9e92-80c1a6f2f31b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_linking_data_to_texts_input(texts_input, entities):\n",
+    "    \"\"\"Insert the retrieved linking data into the variable text_inputs and return it\"\"\"\n",
+    "    entities_per_text = {}\n",
+    "    for entity in entities:\n",
+    "        if entity[\"text_id\"] not in entities_per_text:\n",
+    "            entities_per_text[entity[\"text_id\"]] = {}\n",
+    "        entities_per_text[entity[\"text_id\"]][entity[\"entity_text\"]] = entity\n",
+    "    for text_id, text in enumerate(texts_input):\n",
+    "        for entity in text[\"entities\"]:\n",
+    "            if text_id in entities_per_text and entity[\"text\"] in entities_per_text[text_id]:\n",
+    "                entity[\"link\"] = entities_per_text[text_id][entity[\"text\"]][\"link\"]\n",
+    "    return texts_input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "id": "2e34a6d1-e14f-4230-8a1e-55a068c0c2aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LINKING_CACHE_FILE = \"linking_cache.json\"\n",
+    "model = \"gpt-4o-mini\"\n",
+    "\n",
+    "\n",
+    "def openai_link_suggestion(model, entities):\n",
+    "    openai_api_key = utils.get_openai_api_key()\n",
+    "    openai_client = utils.connect_to_openai(openai_api_key)\n",
+    "    entities = utils.extract_entities_from_ner_input(texts_input)\n",
+    "    linking_cache = utils.read_json_file(LINKING_CACHE_FILE)\n",
+    "    for entity in entities:\n",
+    "        if (entity[\"entity_text\"] in linking_cache and \n",
+    "            entity[\"text\"] in linking_cache[entity[\"entity_text\"]] and\n",
+    "            model in linking_cache[entity[\"entity_text\"]][entity[\"text\"]]):\n",
+    "            utils.squeal(f\"Retrieving entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} from cache\")\n",
+    "            if \"link\" not in entity: entity[\"link\"] = {}\n",
+    "            entity[\"link\"][model] = linking_cache[entity[\"entity_text\"]][entity[\"text\"]][model]\n",
+    "        else:\n",
+    "            utils.squeal(f\"Sending entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} to GPT\")\n",
+    "            time.sleep(1)\n",
+    "            prompt = make_linking_prompt(entity[\"entity_text\"], entity[\"text\"])\n",
+    "            if \"link\" not in entity: entity[\"link\"] = {}\n",
+    "            entity[\"link\"][model] = utils.process_text_with_gpt(openai_client, model, prompt)\n",
+    "            if entity[\"entity_text\"] not in linking_cache:\n",
+    "                linking_cache[entity[\"entity_text\"]] = {}\n",
+    "            if entity[\"text\"] not in linking_cache[entity[\"entity_text\"]]:\n",
+    "                linking_cache[entity[\"entity_text\"]][entity[\"text\"]] = {}\n",
+    "            linking_cache[entity[\"entity_text\"]][entity[\"text\"]][model] = entity[\"link\"][model]\n",
+    "    utils.write_json_file(LINKING_CACHE_FILE, linking_cache)\n",
+    "    print(\"Finished processing\")\n",
+    "    return entities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c566a67-36cb-4806-8fea-217a72f31b7e",
+   "metadata": {},
+   "source": [
+    "Next, we call GPT to suggest the types of links between the entities and the artefact. We call the GPT separately for each unique entity. In case the model used already predicted an entity, we used the link type stored in the cache. The links are collected in the variable `entities` and are later stored in the variable `texts_output`. We show the first item of this variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "30bd265f-5c55-42b4-9f06-b603a024e592",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sending entity \"Bagnani\" of text 100 to GPT\n"
+      "Retrieving entity \"Bagnani\" of text 100 from cache\n",
+      "Finished processing\n",
+      "{'text_cleaned': 'Statuette of the god Anubis. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115', 'entities': [{'entity_text': 'Anubis', 'wikidata_id': 'Q47534', 'link': '1'}]}\n"
      ]
     }
    ],
    "source": [
-    "LINKING_CACHE_FILE = \"linking_cache.json\"\n",
-    "model = \"gpt-4o-mini\"\n",
+    "entities = openai_link_suggestion(model, entities)\n",
+    "texts_output = add_linking_data_to_texts_input(texts_input, entities)\n",
+    "print({\"text_cleaned\": texts_output[0][\"text_cleaned\"],\n",
+    "       \"entities\": [{\"entity_text\": entity[\"text\"], \n",
+    "                     \"wikidata_id\": entity[\"wikidata_id\"][\"id\"], \n",
+    "                     \"link\": list(entity[\"link\"].values())[0]} for entity in texts_output[0][\"entities\"]]})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4ae9406-2049-4bbe-bed2-33bf5d1ee4d1",
+   "metadata": {},
+   "source": [
+    "## 4. Linking visualization\n",
     "\n",
+    "We visualize the results of the linking process by displaying the numeric linking code in superscript next to the entity in its context. Please note that the six numeric codes represent the relations between the entity and the artefact and stand for the following:\n",
     "\n",
-    "openai_api_key = utils.get_openai_api_key()\n",
-    "openai_client = utils.connect_to_openai(openai_api_key)\n",
-    "entities = utils.extract_entities_from_ner_input(texts_input)\n",
-    "linking_cache = utils.read_json_file(LINKING_CACHE_FILE)\n",
-    "for entity in entities:\n",
-    "    if (entity[\"entity_text\"] in linking_cache and \n",
-    "        entity[\"text\"] in linking_cache[entity[\"entity_text\"]] and\n",
-    "        model in linking_cache[entity[\"entity_text\"]][entity[\"text\"]]):\n",
-    "        utils.squeal(f\"Retrieving entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} from cache\")\n",
-    "        entity[\"link\"] = linking_cache[entity[\"entity_text\"]][entity[\"text\"]][model] | {\"model\": model}\n",
-    "    else:\n",
-    "        utils.squeal(f\"Sending entity \\\"{entity['entity_text']}\\\" of text {entity['text_id'] + 1} to GPT\")\n",
-    "        time.sleep(1)\n",
-    "        prompt = make_linking_prompt(entity[\"entity_text\"], entity[\"text\"])\n",
-    "        entity[\"link\"] = {model: utils.process_text_with_gpt(openai_client, model, prompt)}\n",
-    "        if entity[\"entity_text\"] not in linking_cache:\n",
-    "            linking_cache[entity[\"entity_text\"]] = {}\n",
-    "        if entity[\"text\"] not in linking_cache[entity[\"entity_text\"]]:\n",
-    "            linking_cache[entity[\"entity_text\"]][entity[\"text\"]] = {}\n",
-    "        linking_cache[entity[\"entity_text\"]][entity[\"text\"]][model] = {key: value \n",
-    "                                                                       for key, value in entity[\"link\"].items()}\n",
-    "utils.write_json_file(LINKING_CACHE_FILE, linking_cache)\n",
-    "print(\"Finished processing\")"
+    "1. the artefact represents the entity\n",
+    "2. the entity represents the geographical context of the artefact\n",
+    "3. the entity represents the historical context of the artefact\n",
+    "4. the entity is related to an object or person represented in the artefact\n",
+    "5. the entity is a previous owner of the artefact\n",
+    "6. the entity is mentioned for another reason"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "c4a8a46e-9ef5-4c7e-9901-e8bcbc175c24",
+   "execution_count": 35,
+   "id": "460020ff-a77c-45ad-a9c5-456f9608e074",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "Statuette of the god <span style=\"border: 1px solid black; color: red;\">Anubis</span><sup>Q47534,1</sup>. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115"
+      ],
       "text/plain": [
-       "126"
+       "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 68,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"border: 1px solid black; color: red;\">Sekhmet</span><sup>Q146104,1</sup> was a goddess. <span style=\"border: 1px solid black; color: green;\">Thebes</span><sup>Q101583,2</sup> is referenced. The object is made of granodiorite and belongs to the Drovetti collection (1824). It dates back to the New Kingdom, 18th Dynasty, during the reign of <span style=\"border: 1px solid black; color: red;\">Amenhotep III</span><sup>Q42606,1</sup> (1390-1353 BC)."
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Statuette of the goddess <span style=\"border: 1px solid black; color: red;\">Bastet</span><sup>Q129106,1</sup>. Bronze. Late Period (722-332 BC).. <span style=\"border: 1px solid black; color: red;\">Drovetti</span><sup>Q822895,4</sup> collection (1824). C. 271"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "len(linking_cache)"
+    "for text_id, text in enumerate(texts_output):\n",
+    "    if text_id < 3:\n",
+    "        display(HTML(utils.mark_entities_in_text(text[\"text_llm_output\"], text[\"entities\"])))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e9cb9e1-87d8-44ac-af29-051df6d10ba5",
+   "metadata": {},
+   "source": [
+    "## 5. Save results\n",
+    "\n",
+    "We save the results in a json file. The helper function used for this is defined in the file `utils.py`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "09bad32c-1c93-4d99-b6a1-9896acda1676",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "️✅ Saved preprocessed texts to file output_linking_d14c085be6d666bfa938a7537b06fd1f031347ab.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "utils.save_results(texts_output, \"linking_\", in_colab=in_colab)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80430b4e-ea0f-46e8-8e58-0bdacde83d77",
+   "id": "afb00f7b-dcf6-4b0b-b756-aa8b39494958",
    "metadata": {},
    "outputs": [],
    "source": []
