added cache and utils

--- a/notebooks/tasks/ner.ipynb
+++ b/notebooks/tasks/ner.ipynb
@@ -38,6 +38,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b3472abb-a6ca-446a-8424-8b7af78cdedc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "649c95e6-d75d-4394-904c-6d3819d07f67",
    "metadata": {},
@@ -47,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "37f5ff2d-7192-4487-9ed1-c02abcbccf83",
    "metadata": {},
    "outputs": [],
@@ -60,7 +71,8 @@
     "import os\n",
     "import regex\n",
     "import subprocess\n",
-    "from typing import List, Dict, Any, Tuple, Optional"
+    "from typing import List, Dict, Any, Tuple, Optional\n",
+    "import utils"
    ]
   },
   {
@@ -73,52 +85,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "51cef27a-cca0-45b9-a20d-893b3bf0ae38",
    "metadata": {},
    "outputs": [],
    "source": [
-    "char_package = \"📦\"\n",
-    "char_success = \"✅\"\n",
-    "char_failure = \"❌\"\n",
-    "\n",
-    "\n",
-    "def safe_import(package_name):\n",
-    "    \"\"\"Import a package;. If it missing, download it first\"\"\"\n",
-    "    try:\n",
-    "        return importlib.import_module(package_name)\n",
-    "    except ImportError:\n",
-    "        print(f\"{char_package} {package_name} not found. Installing...\")\n",
-    "        subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", package_name])\n",
-    "        print(f\"Finished installing {package_name}\")\n",
-    "        return importlib.import_module(package_name)\n",
-    "\n",
-    "\n",
-    "langid = safe_import(\"langid\")\n",
-    "openai = safe_import(\"openai\")\n",
-    "spacy = safe_import(\"spacy\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "aa68a2c2-291f-4d9c-8671-a4f412b36f4e",
-   "metadata": {},
-   "source": [
-    "Here is code for monitoring the progress of the task:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "6ee9829e-bca8-49e9-8db6-589f8adaff1d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def squeal(text=None):\n",
-    "    \"\"\"Clear the output buffer of the current cell and print the given text\"\"\"\n",
-    "    clear_output(wait=True)\n",
-    "    if not text is None: \n",
-    "        print(text)"
+    "langid = utils.safe_import(\"langid\")\n",
+    "openai = utils.safe_import(\"openai\")\n",
+    "spacy = utils.safe_import(\"spacy\")"
    ]
   },
   {
@@ -136,22 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import HTML, display\n",
-    "\n",
-    "\n",
-    "def set_css():\n",
-    "    \"\"\"Fix line wrapping of output texts for Google Colab\"\"\"\n",
-    "    display(HTML(\"<style> pre { white-space: pre-wrap; </style>\"))\n",
-    "\n",
-    "\n",
-    "try:\n",
-    "    from google.colab import files\n",
-    "    IN_COLAB = True\n",
-    "except:\n",
-    "    IN_COLAB = False\n",
-    "\n",
-    "if IN_COLAB:\n",
-    "    get_ipython().events.register('pre_run_cell', set_css)"
+    "in_colab = utils.check_google_colab()"
    ]
   },
   {
@@ -205,48 +164,12 @@
    "id": "cf971106-8b8f-4a45-9a91-d81bbd360e62",
    "metadata": {},
    "source": [
-    "First we define four supportive functions"
+    "First we define two helper functions"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "63fb0248",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_openai_api_key():\n",
-    "    \"\"\"Extract OpenAI API key from environment or file and return it\"\"\"\n",
-    "    load_dotenv()\n",
-    "    openai_api_key = os.getenv(\"OPENAI_API_KEY\")\n",
-    "    if not openai_api_key:\n",
-    "        try:\n",
-    "            with open(\"OPENAI_API_KEY\", \"r\") as infile:\n",
-    "                openai_api_key = infile.read().strip()\n",
-    "                infile.close()\n",
-    "        except:\n",
-    "            pass\n",
-    "    if not openai_api_key:\n",
-    "        print(f\"{char_failure} no openai_api_key found!\")\n",
-    "        return \"\"\n",
-    "    return openai_api_key"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "c1cd3431-1a78-4b00-8868-d4d80260039b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def connect_to_openai(openai_api_key):\n",
-    "    \"\"\"Connect to OpenAI and return processing space\"\"\"\n",
-    "    return openai.OpenAI(api_key=openai_api_key)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "id": "f4c2434c-50a4-4c1f-82a2-610fad9d247d",
    "metadata": {},
    "outputs": [],
@@ -268,18 +191,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "a7b893de-c1f1-469b-81bc-d64b40fd32cb",
+   "execution_count": 7,
+   "id": "99d29d7e-8a26-411f-ba5b-05cda6d63adc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_text_with_gpt(openai_client, model, prompt):\n",
-    "    \"\"\"Send text to OpenAI via prompt and return results\"\"\"\n",
-    "    response = openai_client.chat.completions.create(\n",
-    "        model=model,\n",
-    "        messages=[{\"role\": \"user\", \"content\": prompt}]\n",
-    "    )\n",
-    "    return response.choices[0].message.content"
+    "model = \"gpt-4o-mini\"\n",
+    "target_labels=[\"PERSON\", \"LOCATION\"]\n",
+    "NER_CACHE_FILE = \"ner_cache.json\"\n",
+    "\n",
+    "def openai_ner(model, texts_input):\n",
+    "    openai_api_key = utils.get_openai_api_key()\n",
+    "    openai_client = utils.connect_to_openai(openai_api_key)\n",
+    "    ner_cache = utils.read_json_file(NER_CACHE_FILE)\n",
+    "    texts_output = []\n",
+    "    for index, text in enumerate(texts_input):\n",
+    "        if text in ner_cache and model in ner_cache[text]:\n",
+    "            utils.squeal(f\"Retrieving entities for text {index + 1} from cache\")\n",
+    "            texts_output.append(ner_cache[text][model])\n",
+    "        else:\n",
+    "            utils.squeal(f\"Processing text {index + 1} with GPT\")\n",
+    "            prompt = make_prompt(text, target_labels)\n",
+    "            texts_output.append(utils.process_text_with_gpt(openai_client, model, prompt))\n",
+    "    utils.write_json_file(NER_CACHE_FILE, \n",
+    "                          {text_input: {model: text_output} \n",
+    "                           for text_input, text_output in zip(texts_input, texts_output)})\n",
+    "    print(\"Finished processing\")\n",
+    "    return texts_output"
    ]
   },
   {
@@ -292,32 +230,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "99d29d7e-8a26-411f-ba5b-05cda6d63adc",
+   "execution_count": 8,
+   "id": "a66bff5e-3e90-40e9-8b9b-d595661006d1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing text 2\n",
+      "Retrieving entities for text 100 from cache\n",
       "Finished processing\n",
-      "Statuette of the god [Anubis](PERSON). Bronze. Late Period (722-332 BC). Acquired before 1882. C. 115\n"
+      "Statuette of the god [Anubis](PERSON). Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115\n"
      ]
     }
    ],
    "source": [
-    "model = \"gpt-4o-mini\"\n",
-    "target_labels=[\"PERSON\", \"LOCATION\"]\n",
-    "\n",
-    "openai_api_key = get_openai_api_key()\n",
-    "openai_client = connect_to_openai(openai_api_key)\n",
-    "texts_output = []\n",
-    "for index, text in enumerate(texts_input):\n",
-    "    squeal(f\"Processing text {index + 1}\")\n",
-    "    prompt = make_prompt(text, target_labels)\n",
-    "    texts_output.append(process_text_with_gpt(openai_client, model, prompt))\n",
-    "print(\"Finished processing\")\n",
+    "texts_output = openai_ner(model, texts_input)\n",
     "print(texts_output[0])"
    ]
   },
@@ -341,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "ff163088-2219-42f6-9778-c72f786e698e",
    "metadata": {},
    "outputs": [],
@@ -366,17 +294,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "b3cc9469-5296-4221-9703-44521f20b725",
    "metadata": {},
    "outputs": [],
    "source": [
     "COLORS = {\"PERSON\": \"red\", \"LOCATION\": \"green\", \"OTHER\": \"blue\"}\n",
-    "\n",
+    "LOCATION_ALTERNATIVES = [\"PLACE\"]\n",
     "\n",
     "def mark_entities_in_text(texts_input, entities):\n",
     "    \"\"\"Convert the text to HTML with colored antities and return these\"\"\"\n",
     "    for entity in reversed(entities):\n",
+    "        entity[\"label\"] = \"LOCATION\" if entity[\"label\"] in LOCATION_ALTERNATIVES else entity[\"label\"]\n",
     "        entity_label = entity[\"label\"] if entity[\"label\"] in COLORS.keys() else \"OTHER\"\n",
     "        texts_input = texts_input[:entity[\"end_char\"]] + \"</span>\" + texts_input[entity[\"end_char\"]:]\n",
     "        texts_input = (texts_input[:entity[\"start_char\"]] + \n",
@@ -387,14 +316,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "ccdb03eb-b38d-4ee5-af7b-9676de01a335",
    "metadata": {},
    "outputs": [],
    "source": [
     "def check_llm_output_text(text_llm_output, texts_input):\n",
     "    if text_llm_output != texts_input:\n",
-    "        print(f\"{char_failure} Output text of named entity recognition is different from input text!\")"
+    "        print(f\"{utils.CHAR_FAILURE} Output text of named entity recognition is different from input text!\")"
    ]
   },
   {
@@ -407,10 +336,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "5b7f5a6e-247d-4c2c-aeff-22023cee039f",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "Statuette of the god <span style=\"border: 1px solid black; color: red;\">Anubis</span>. Bronze. Late Period (722-332 BC).. Acquired before 1882. C. 115"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -421,7 +362,7 @@
     {
      "data": {
       "text/html": [
-       "Statuette of the god <span style=\"border: 1px solid black; color: red;\">Anubis</span>. Bronze. Late Period (722-332 BC). Acquired before 1882. C. 115"
+       "<span style=\"border: 1px solid black; color: red;\">Sekhmet</span> was a goddess. <span style=\"border: 1px solid black; color: green;\">Thebes</span> is referenced. The object is made of granodiorite and belongs to the Drovetti collection (1824). It dates back to the New Kingdom, 18th Dynasty, during the reign of <span style=\"border: 1px solid black; color: red;\">Amenhotep III</span> (1390-1353 BC)."
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -433,7 +374,45 @@
     {
      "data": {
       "text/html": [
-       "<span style=\"border: 1px solid black; color: green;\">Statue</span> of the goddess <span style=\"border: 1px solid black; color: red;\">Sekhmet</span>. Granodiorite. New Kingdom, 18th Dynasty, reign of <span style=\"border: 1px solid black; color: red;\">Amenhotep III</span> (1390-1353 BC). <span style=\"border: 1px solid black; color: green;\">Thebes</span>.. Drovetti collection (1824). C. 256"
+       "Statuette of the goddess <span style=\"border: 1px solid black; color: red;\">Bastet</span>. Bronze. Late Period (722-332 BC).. <span style=\"border: 1px solid black; color: red;\">Drovetti</span> collection (1824). C. 271"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ Output text of named entity recognition is different from input text!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<span style=\"border: 1px solid black; color: red;\">Harpocrates</span>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "❌ Output text of named entity recognition is different from input text!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Statuette of the goddess <span style=\"border: 1px solid black; color: red;\">Satet</span>. Bronze. Late Period (722-332 BC). Drovetti collection (1824). C. 515"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -472,31 +451,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "bad49629-135b-4651-b5da-c21f5bcec398",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def save_results(texts, key):\n",
-    "    \"\"\"Save preprocessed texts in a json file\"\"\"\n",
-    "    json_string = json.dumps(texts, ensure_ascii=False, indent=2)\n",
-    "    hash = hashlib.sha1(json_string.encode(\"utf-8\")).hexdigest()\n",
-    "    output_file_name = f\"output_{key}{hash}.json\"\n",
-    "    with open(output_file_name, \"w\", encoding=\"utf-8\") as output_file:\n",
-    "        print(json_string, end=\"\", file=output_file)\n",
-    "        output_file.close()\n",
-    "        if IN_COLAB:\n",
-    "            try:\n",
-    "                files.download(output_file_name)\n",
-    "                print(f\"️{char_success} Downloaded preprocessed texts to file {output_file_name}\")\n",
-    "            except:\n",
-    "                print(f\"️{char_failure} Downloading preprocessed texts failed!\")\n",
-    "        else:\n",
-    "            print(f\"️{char_success} Saved preprocessed texts to file {output_file_name}\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "24d2f355-ceb0-423e-99ea-17489f289189",
    "metadata": {},
@@ -506,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "bf595c60-2d89-4baf-83a7-e5a00c2e25f8",
    "metadata": {},
    "outputs": [
@@ -514,7 +468,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "️✅ Saved preprocessed texts to file output_ner_6a00b1a3f413bd52f53deaff4cf5a5179c59c7a4.json\n"
+      "️✅ Saved preprocessed texts to file output_ner_5f12fa7c16d33ea378148197569f999f774f7481.json\n"
      ]
     }
    ],
@@ -522,7 +476,7 @@
     "for index, entities in enumerate(entities_all):\n",
     "    input_data[index][\"entities\"] = entities[\"entities\"]\n",
     "    input_data[index][\"text_llm_output\"] = entities[\"text_llm_output\"]\n",
-    "save_results(input_data, key=\"ner_\")"
+    "utils.save_results(input_data, key=\"ner_\", in_colab=in_colab)"
    ]
   },
   {
@@ -555,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "0c8c4531-2d1a-49dd-9c7b-ae71910c8ed0",
    "metadata": {},
    "outputs": [],
@@ -567,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "9e7a16d8-ce60-44b8-bcd7-c36bcadb508b",
    "metadata": {},
    "outputs": [],
@@ -602,7 +556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "0f77287b-d00c-4780-ac6d-1586241e7275",
    "metadata": {},
    "outputs": [],
@@ -634,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "3406011a-9d11-4dbf-bdb7-a0809530acee",
    "metadata": {},
    "outputs": [
@@ -642,7 +596,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing text 2\n",
+      "Processing text 100\n",
       "Finished processing\n",
       "Statuette of the god Anubis. [Bronze](PERSON). Late Period (722-332 BC).. Acquired before 1882. C. 115\n"
      ]
@@ -652,7 +606,7 @@
     "texts_output = []\n",
     "last_language_id = \"\"\n",
     "for index, text in enumerate(texts_input):\n",
-    "    squeal(f\"Processing text {index + 1}\")\n",
+    "    utils.squeal(f\"Processing text {index + 1}\")\n",
     "    language_id = detect_text_language(text)\n",
     "    if language_id != last_language_id:\n",
     "        nlp = load_spacy_model(language_id)\n",
@@ -666,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c25d547c-0aee-47d4-8e4d-97d70fdf9b69",
+   "id": "1392692b-8473-4ff0-ac1a-ed411efa9ce4",
    "metadata": {},
    "outputs": [],
    "source": []
