added PLACES to utils

--- a/notebooks/tasks/entity_linking.ipynb
+++ b/notebooks/tasks/entity_linking.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "id": "89a5f46e-2cd4-4761-9ab9-4e64259dc259",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "9fd0b672-7c62-4cdc-9e92-80c1a6f2f31b",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "2e34a6d1-e14f-4230-8a1e-55a068c0c2aa",
    "metadata": {},
    "outputs": [],
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "id": "30bd265f-5c55-42b4-9f06-b603a024e592",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
     }
    ],
    "source": [
-    "entities = openai_link_suggestion(model, entities)\n",
+    "entities = openai_link_suggestion(model, texts_input)\n",
     "texts_output = add_linking_data_to_texts_input(texts_input, entities)\n",
     "print({\"text_cleaned\": texts_output[0][\"text_cleaned\"],\n",
     "       \"entities\": [{\"entity_text\": entity[\"text\"], \n",
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
    "id": "460020ff-a77c-45ad-a9c5-456f9608e074",
    "metadata": {},
    "outputs": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 11,
    "id": "09bad32c-1c93-4d99-b6a1-9896acda1676",
    "metadata": {},
    "outputs": [
