used function from utils

--- a/notebooks/tasks/ner.ipynb
+++ b/notebooks/tasks/ner.ipynb
@@ -295,28 +295,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b3cc9469-5296-4221-9703-44521f20b725",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "COLORS = {\"PERSON\": \"red\", \"LOCATION\": \"green\", \"OTHER\": \"blue\"}\n",
-    "LOCATION_ALTERNATIVES = [\"PLACE\"]\n",
-    "\n",
-    "def mark_entities_in_text(texts_input, entities):\n",
-    "    \"\"\"Convert the text to HTML with colored antities and return these\"\"\"\n",
-    "    for entity in reversed(entities):\n",
-    "        entity[\"label\"] = \"LOCATION\" if entity[\"label\"] in LOCATION_ALTERNATIVES else entity[\"label\"]\n",
-    "        entity_label = entity[\"label\"] if entity[\"label\"] in COLORS.keys() else \"OTHER\"\n",
-    "        texts_input = texts_input[:entity[\"end_char\"]] + \"</span>\" + texts_input[entity[\"end_char\"]:]\n",
-    "        texts_input = (texts_input[:entity[\"start_char\"]] + \n",
-    "                      f\"<span style=\\\"border: 1px solid black; color: {COLORS[entity_label]};\\\">\" + \n",
-    "                      texts_input[entity[\"start_char\"]:])\n",
-    "    return texts_input"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "id": "ccdb03eb-b38d-4ee5-af7b-9676de01a335",
    "metadata": {},
    "outputs": [],
@@ -336,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "5b7f5a6e-247d-4c2c-aeff-22023cee039f",
    "metadata": {},
    "outputs": [
@@ -429,7 +407,7 @@
     "    entities_all.append({\"entities\": entities, \"text_llm_output\": text_llm_output})\n",
     "    if index < 5:\n",
     "        check_llm_output_text(text_llm_output, texts_input[index])\n",
-    "        display(HTML(mark_entities_in_text(text_llm_output, entities)))"
+    "        display(HTML(utils.mark_entities_in_text(text_llm_output, entities)))"
    ]
   },
   {
@@ -460,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "bf595c60-2d89-4baf-83a7-e5a00c2e25f8",
    "metadata": {},
    "outputs": [
@@ -509,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "0c8c4531-2d1a-49dd-9c7b-ae71910c8ed0",
    "metadata": {},
    "outputs": [],
@@ -521,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "9e7a16d8-ce60-44b8-bcd7-c36bcadb508b",
    "metadata": {},
    "outputs": [],
@@ -540,7 +518,7 @@
     "def load_spacy_model(language_id):\n",
     "    \"\"\"Load the Spacy model for the current language and return it\"\"\"\n",
     "    if language_id not in LANG_MODELS.keys():\n",
-    "        print(\"{char_failure} warning: unknown language {language_id}. Switching to multilingual model...\")\n",
+    "        print(f\"{utils.CHAR_FAILURE} warning: unknown language {language_id}. Switching to multilingual model...\")\n",
     "        language_id = \"xx\"\n",
     "    try:\n",
     "        nlp = spacy.load(LANG_MODELS[language_id])\n",
@@ -550,13 +528,13 @@
     "            spacy.cli.download(LANG_MODELS[language_id])\n",
     "            nlp = spacy.load(LANG_MODELS[language_id])\n",
     "        except:\n",
-    "            raise(RuntimeError(f\"{char_failure} Cannot find language model {LANG_MODELS[language_id]}!\"))\n",
+    "            raise(RuntimeError(f\"{utils.CHAR_FAILURE} Cannot find language model {LANG_MODELS[language_id]}!\"))\n",
     "    return nlp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "0f77287b-d00c-4780-ac6d-1586241e7275",
    "metadata": {},
    "outputs": [],
@@ -588,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "3406011a-9d11-4dbf-bdb7-a0809530acee",
    "metadata": {},
    "outputs": [
