moved detect_text_language to utils

--- a/notebooks/tasks/ner.ipynb
+++ b/notebooks/tasks/ner.ipynb
@@ -90,7 +90,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "langid = utils.safe_import(\"langid\")\n",
     "openai = utils.safe_import(\"openai\")\n",
     "spacy = utils.safe_import(\"spacy\")"
    ]
@@ -488,18 +487,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "0c8c4531-2d1a-49dd-9c7b-ae71910c8ed0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def detect_text_language(text: str) -> Dict[str, Any]:\n",
-    "    \"\"\"Detect language text is written in and return id of the language\"\"\"\n",
-    "    return langid.classify(text)[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
    "id": "9e7a16d8-ce60-44b8-bcd7-c36bcadb508b",
    "metadata": {},
    "outputs": [],
@@ -534,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "0f77287b-d00c-4780-ac6d-1586241e7275",
    "metadata": {},
    "outputs": [],
@@ -566,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "3406011a-9d11-4dbf-bdb7-a0809530acee",
    "metadata": {},
    "outputs": [
@@ -585,7 +572,7 @@
     "last_language_id = \"\"\n",
     "for index, text in enumerate(texts_input):\n",
     "    utils.squeal(f\"Processing text {index + 1}\")\n",
-    "    language_id = detect_text_language(text)\n",
+    "    language_id = utils.detect_text_language(text)\n",
     "    if language_id != last_language_id:\n",
     "        nlp = load_spacy_model(language_id)\n",
     "        last_language_id = language_id\n",
